--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,15 @@
             <artifactId>spring-security-core</artifactId>
             <version>6.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version> <!-- Or the latest version -->
+        </dependency>
+
+
+
+
 
 
 
